# TP2022-Algorythms

./: .gitignore  Array.h  CMakeLists.txt  MinHeap.h  README.md  Source.cpp  main copy.cpp  main.cpp  main.sdf  main.sln  main.vcxproj  main.vcxproj.filters
ArcGraph/: ArcGraph.cpp  ArcGraph.h
IGraph/: IGraph.cpp  IGraph.h
ListGraph/: ListGraph.cpp  ListGraph.h
MatrixGraph/: MatrixGraph.cpp  MatrixGraph.h
RK1_1/: RK1_1.cpp  RK1_1.sln  RK1_1.vcxproj
RK1_1/Контест/: A. Сдвинутый массив — АиСД Весна 2022 РК1. Вариант 1 — Яндекс.Контест.html
RK1_2/: RK1_1.cpp  RK1_1.vcxproj.filters
RK1_2/Контест/: B. Правильная скобочная последовательность — АиСД Весна 2022 РК1. Вариант 1 — Яндекс.Контест.html
RK1_3/Контест/: C. Замкнутая ломаная — АиСД Весна 2022 РК1. Вариант 1 — Яндекс.Контест.html
SetGraph/: SetGraph.cpp  SetGraph.h
benchmark/: run_benchmark.sh
benchmark/generator/: generator.cpp
benchmark/scripts/: build.sh  clear.sh
benchmark/src/: benchmark.cpp
Условие/: 1. Минимальное значение в бинарном дереве — АиСД Весна 2022 РК2 — Яндекс.Контест.html  2. Кратчайшее расстояние от корня до листа — АиСД Весна 2022 РК2 — Яндекс.Контест.html  3. Хеш-таблица — АиСД Весна 2022 РК2 — Яндекс.Контест.html  4. AVL-дерево — АиСД Весна 2022 РК2 — Яндекс.Контест.html
Условие/2. Кратчайшее расстояние от корня до листа — АиСД Весна 2022 РК2 — Яндекс.Контест_files/: watch.js.Без названия
